# react-native-tempo-classifier

./: .gitignore  AGENTS.md  NitroTempoClassifier.podspec  README.md  nitro.json  package-lock.json  package.json
android/: CMakeLists.txt  build-rust-android.sh  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/tempoclassifier/: HybridTempoClassifier.kt  NitroTempoClassifierPackage.kt  TempoClassifierAssets.kt  TempoClassifierEngine.kt
cpp/: HybridTempoClassifier.cpp  HybridTempoClassifier.hpp
cpp/rust/: TempoClassifierRustBridge.cpp  TempoClassifierRustBridge.hpp
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
example/__tests__/: App.test.tsx
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/assets/: tempo_classifier.json
example/android/app/src/main/java/com/tempoexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TempoExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TempoExample.xcodeproj/: project.pbxproj
example/ios/TempoExample.xcodeproj/xcshareddata/xcschemes/: TempoExample.xcscheme
ios/: Bridge.h
rust/: Cargo.toml
rust/src/: lib.rs  rf_model.rs
scripts/: export_tempo_model.py
src/: index.ts
src/specs/: TempoClassifier.nitro.ts
